# speedmap

./: .env.example  .gitignore  LICENSE  README.md  release.sh
.github/workflows/: release.yml
altstore/: source.json
rust-app/: README.md  build.sh
rust-app/src/: index.html  main.js  style.css
rust-app/src-tauri/: Cargo.toml  build-ios.sh  tauri.conf.json
rust-app/src-tauri/capabilities/: default.json
rust-app/src-tauri/src/: lib.rs
screenshots/: .gitkeep
