[package]
name = "speedmap"
version = "1.0.2"
description = "Measure internet speed and visualize as heatmap"
authors = ["Ludger Radke"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
